--- a/service.html
+++ b/service.html
@@ -13,6 +13,7 @@
   <meta name="author" content="" />
 
   <title> Web Development Service & SEO | Knewton Alta Developer</title>
+  <link rel="icon" type="images/x-icon" href="images/favicon.png" />
 
 
   <!-- bootstrap core css -->
@@ -80,14 +81,14 @@
           Our Services
         </h2>
         <p>
-          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Unlock success with our premium services. Tailored solutions for your every need, ensuring your goals are met effectively.
         </p>
       </div>
       <div class="row">
         <div class="col-md-6 col-lg-3">
           <div class="box">
             <div class="img-box">
-              <img src="images/s1.png" alt="">
+              <img src="images/s1.png" alt="Link Buidling">
             </div>
             <div class="detail-box">
               <h5>
@@ -96,7 +97,7 @@
               <p>
                 Enhance your online presence with our expert Link Building service. Boost visibility and drive traffic effectively!,
               </p>
-              <a href="">
+              <a href="contact.html">
                 <span>
                   Read More
                 </span>
@@ -108,7 +109,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="box">
             <div class="img-box">
-              <img src="images/s2.png" alt="">
+              <img src="images/s2.png" alt="Seo service">
             </div>
             <div class="detail-box">
               <h5>
@@ -117,7 +118,7 @@
               <p>
                 Elevate your website's performance with our On-Page SEO service. Optimize content, meta tags, and more for better rankings,
               </p>
-              <a href="">
+              <a href="contact.html">
                 <span>
                   Read More
                 </span>
@@ -129,7 +130,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="box">
             <div class="img-box">
-              <img src="images/s3.png" alt="">
+              <img src="images/s3.png" alt="Online marketing">
             </div>
             <div class="detail-box">
               <h5>
@@ -151,7 +152,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="box">
             <div class="img-box">
-              <img src="images/s4.png" alt="">
+              <img src="images/s4.png" alt="Email marketing">
             </div>
             <div class="detail-box">
               <h5>
@@ -160,7 +161,7 @@
               <p>
                 Reach your audience effectively with our Email Marketing service. Engage, inform, and convert subscribers with targeted campaigns,
               </p>
-              <a href="">
+              <a href="contact.html">
                 <span>
                   Read More
                 </span>
@@ -175,7 +176,7 @@
   <!-- end service section -->
 
 
-  <div class="footer_container">
+ <div class="footer_container">
     <!-- info section -->
 
     <section class="info_section ">
@@ -183,11 +184,9 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 ">
             <div class="info_detail">
-              <h4>
-                Digian
-              </h4>
+           <img src="images/logo.png" alt="Knewton Alta Developer Banner">
               <p>
-                Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+                Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!
               </p>
             </div>
           </div>
@@ -216,7 +215,7 @@
             <h4>
               Subscribe
             </h4>
-            <form action="#">
+            <form action="mailto:darksoulinside8@gmail.com">
               <input type="text" placeholder="Enter email" />
               <button type="submit">
                 Subscribe
@@ -229,39 +228,24 @@
                 Address
               </h4>
               <div class="contact_link_box">
-                <a href="">
-                  <i class="fa fa-map-marker" aria-hidden="true"></i>
-                  <span>
-                    Location
-                  </span>
-                </a>
-                <a href="">
+                 <a href="mailto:darksoulinside8@gmail.com">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
                     Call +01 1234567890
                   </span>
                 </a>
-                <a href="">
+                <a href="mailto:darksoulinside8@gmail.com">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    demo@gmail.com
+                    darksoulinside8@gmail.com
                   </span>
                 </a>
               </div>
             </div>
             <div class="info_social">
-              <a href="">
+              <a href="https://www.facebook.com/dev.knewton">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
+                  </a>
             </div>
           </div>
         </div>
@@ -275,7 +259,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="https://www.facebook.com/dev.knewton">Developer Knewton</a>
         </p>
       </div>
     </footer>
