--- a/service.html
+++ b/service.html
@@ -37,10 +37,8 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <span>
-              Digian
-            </span>
           </a>
+           <img src="images/logo.png" alt="Knewton Alta Developer Banner">
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class=""> </span>
@@ -139,7 +137,7 @@
               <p>
                 Maximize your digital reach with our Online Marketing service. Drive traffic, engage customers, and grow your brand online effectively!,
               </p>
-              <a href="">
+              <a href="contact.html">
                 
                 <span>
                   Read More
