--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
+ <meta name="keywords" content="CONTACT US,Web development companies, Web solutions, Link Building, On page Seo , Off Page Seo," />
+  <meta name="description" content="CONTACT US Web development company from USA offering the best Web development services " />
   <meta name="author" content="" />
 
-  <title>Contact Us | Knewton Alta Developer</title>
-
+  <title>CONTACT US Web Development & SEO | Knewton Alta Developer</title>
+<link rel="icon" type="images/x-icon" href="images/favicon.png" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -36,10 +36,8 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <span>
-              Knewton Alta Developer
-            </span>
-          </a>
+                   </a>
+          <img src="images/logo.png" alt="Knewton Alta Developer Banner">
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class=""> </span>
@@ -61,7 +59,7 @@
               </li>
             </ul>
             <div class="quote_btn-container">
-              <a href="" class="quote_btn">
+              <a href="mailto:darksoulinside8@gmail.com" class="quote_btn">
                 Get A Quote
               </a>
             </div>
@@ -126,11 +124,9 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 ">
             <div class="info_detail">
-              <h4>
-                Knewton Alta Developer
-              </h4>
+           <img src="images/logo.png" alt="Knewton Alta Developer Banner">
               <p>
-                Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates
+                Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!
               </p>
             </div>
           </div>
@@ -159,7 +155,7 @@
             <h4>
               Subscribe
             </h4>
-            <form action="#">
+            <form action="mailto:darksoulinside8@gmail.com">
               <input type="text" placeholder="Enter email" />
               <button type="submit">
                 Subscribe
@@ -172,39 +168,24 @@
                 Address
               </h4>
               <div class="contact_link_box">
-                <a href="">
-                  <i class="fa fa-map-marker" aria-hidden="true"></i>
-                  <span>
-                    Location
-                  </span>
-                </a>
-                <a href="">
+                 <a href="mailto:darksoulinside8@gmail.com">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
                     Call +01 1234567890
                   </span>
                 </a>
-                <a href="">
+                <a href="mailto:darksoulinside8@gmail.com">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    demo@gmail.com
+                    darksoulinside8@gmail.com
                   </span>
                 </a>
               </div>
             </div>
             <div class="info_social">
-              <a href="">
+              <a href="https://www.facebook.com/dev.knewton">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
+                  </a>
             </div>
           </div>
         </div>
@@ -217,7 +198,8 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By Knewton Developer
+          &copy; <span id="displayYear"></span> All Rights Reserved By
+          <a href="https://www.facebook.com/dev.knewton">Developer Knewton</a>
         </p>
       </div>
     </footer>
