--- a/seo-service.html
+++ b/seo-service.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
 <meta name="keywords" content="SEO,Monthly Seo Services, Seo Monthly Package, Link Building, On page Seo , Off Page Seo," />
-  <meta name="description" content="Boost your online visibility with our complete monthly SEO service! We'll fix website issues, build links, and create targeted content to improve your search rankings. Results typically show in just 2-3 months. Contact us now to discuss your business goals!" />
+  <meta name="description" content="Boost your online visibility with our complete monthly SEO service! We'll fix website issues,!" />
 
   <meta name="author" content="" />
 
@@ -199,9 +199,9 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 ">
             <div class="info_detail">
-            <img src="images/logo.png" alt="Knewton Alta Developer Banner">
+           <img src="images/logo.png" alt="Knewton Alta Developer Banner">
               <p>
-                Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+                Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!
               </p>
             </div>
           </div>
@@ -230,7 +230,7 @@
             <h4>
               Subscribe
             </h4>
-            <form action="#">
+            <form action="mailto:darksoulinside8@gmail.com">
               <input type="text" placeholder="Enter email" />
               <button type="submit">
                 Subscribe
@@ -243,39 +243,24 @@
                 Address
               </h4>
               <div class="contact_link_box">
-                <a href="">
-                  <i class="fa fa-map-marker" aria-hidden="true"></i>
-                  <span>
-                    Location
-                  </span>
-                </a>
-                <a href="">
+                 <a href="mailto:darksoulinside8@gmail.com">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
                     Call +01 1234567890
                   </span>
                 </a>
-                <a href="">
+                <a href="mailto:darksoulinside8@gmail.com">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    demo@gmail.com
+                    darksoulinside8@gmail.com
                   </span>
                 </a>
               </div>
             </div>
             <div class="info_social">
-              <a href="">
+              <a href="https://www.facebook.com/dev.knewton">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
+                  </a>
             </div>
           </div>
         </div>
@@ -289,7 +274,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="https://www.facebook.com/dev.knewton">Developer Knewton</a>
         </p>
       </div>
     </footer>
@@ -307,6 +292,7 @@
   <!-- Google Map -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
   <!-- End Google Map -->
+
 
 </body>
 
