--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
 
   <title>CONTACT US Web Development & SEO | Knewton Alta Developer</title>
 <link rel="icon" type="images/x-icon" href="images/favicon.png" />
+    <link rel="canonical" href="https://developer.knewton.com/contact" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
