--- a/seo-service.html
+++ b/seo-service.html
@@ -15,6 +15,7 @@
 
   <title>Our SEO Team will take you to #1 in Google</title>
 <link rel="icon" type="images/x-icon" href="images/favicon.png" />
+	  <link rel="canonical" href="https://developer.knewton.com/seo-service/" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
