--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 
   <title>Web Development & SEO | Knewton Alta Developer</title>
 <link rel="icon" type="images/x-icon" href="images/favicon.png" />
+    <link rel="canonical" href="https://developer.knewton.com/about/" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
