--- a/service.html
+++ b/service.html
@@ -14,7 +14,7 @@
 
   <title> Web Development Service & SEO | Knewton Alta Developer</title>
   <link rel="icon" type="images/x-icon" href="images/favicon.png" />
-    <link rel="canonical" href="https://developer.knewton.com/service/" />
+    <link rel="canonical" href="https://developer.knewton.com/service.html" />
 
 
   <!-- bootstrap core css -->
