--- a/index.html
+++ b/index.html
@@ -503,6 +503,9 @@
                 <a class="" href="service.html">
                   Services
                 </a>
+                 <a class="" href="https://developer.knewton.com/blog/">
+                  Blog
+                </a>
                 <a class="" href="contact.html">
                   Contact Us
                 </a>
