--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="service.html">Services</a>
               </li>
+               <li class="nav-item">
+                <a class="nav-link" href="https://developer.knewton.com/blog/">Blog</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
